# spark_humble

./: .gitignore  README.md  onekey.sh
doc/: spark_usb_serial.rules
src/: onekey.sh
src/lib_test/lib_consumer/: CMakeLists.txt  package.xml
src/lib_test/lib_consumer/src/: consumer.cpp
src/lib_test/the_library/: CMakeLists.txt  package.xml
src/lib_test/the_library/include/the_library/: lib_header.hpp
src/lib_test/the_library/src/: lib_source.cpp  main.cpp
src/spark/executive_smach/smach/: setup.cfg
src/spark/executive_smach/smach_ros/: setup.cfg
src/spark/spark_bringup/: CMakeLists.txt  package.xml
src/spark/spark_bringup/launch/: driver_bringup.launch.py
src/spark/spark_common_interfaces/: CMakeLists.txt  package.xml
src/spark/spark_description/: CMakeLists.txt  package.xml
src/spark/spark_description/launch/: spark_description.launch.py  spark_description.ori_ok.py  spark_launch copy.py  spark_launch.py  spark_xacro.py  test1_launch.py  view_model.launch.py
src/spark/spark_description/rviz/: urdf.rviz
src/spark/spark_description/urdf/: spark_340.urdf copy.xacro  spark_340.urdf.xacro
src/spark/spark_description/urdf/base/: spark_base.urdf
src/spark/spark_teleop/: CMakeLists.txt  package.xml
src/spark/spark_teleop/launch/: teleop.launch.py
src/spark/spark_teleop/scripts/: keyboard_control.sh
src/spark/spark_teleop/src/: teleop_node.cpp
src/spark_app/darknet_ros/darknet_ros/: CMakeLists.txt
src/spark_app/darknet_ros/darknet_ros/launch/: darknet_ros.launch.py  spark_darknet_launch.py
src/spark_app/ros2-tensorflow/ros2-tensorflow/ros2_tensorflow/: CMakeLists.txt
src/spark_app/ros2-tensorflow/ros2-tensorflow/tf_interfaces/: CMakeLists.txt  package.xml
src/spark_app/spark_carry/: package.xml  setup.cfg  setup.py
src/spark_app/spark_carry/launch/: spark_carry_cal.launch.py  spark_carry_object_fix.launch.py
src/spark_app/spark_carry/scripts/: action_carry.sh  publish_start_to_cali.sh  send_topic.sh
src/spark_app/spark_carry/spark_carry/: cali_cam.py  cali_pos.py  hsv_detection.py  s_carry_object.py
src/spark_app/spark_face_recognition/: package.xml  setup.cfg  setup.py
src/spark_app/spark_face_recognition/spark_face_recognition/: insightface.py
src/spark_app/spark_follower/: CMakeLists.txt  package.xml
src/spark_app/spark_follower/launch/: spark_follower.launch.py
src/spark_app/spark_follower/src/: spark_follower.cpp
src/spark_app/spark_handpose/: package.xml  setup.cfg  setup.py
src/spark_app/spark_handpose/spark_handpose/: handgesture.py  handpose.py
src/spark_app/spark_navigation2/: CMakeLists.txt  package.xml
src/spark_app/spark_navigation2/launch/: navigation2.launch.py  start_spark_navigation2.launch.py
src/spark_app/spark_navigation2/map/: map.pgm  map.yaml
src/spark_app/spark_navigation2/param/: spark_navigation copy.yaml  spark_navigation.yaml
src/spark_app/spark_object_detector/yolov8_object_detector/: CMakeLists.txt  package.xml
src/spark_app/spark_object_detector/yolov8_object_detector/launch/: spark_yolov8_object_detector_teleop.launch.py
src/spark_app/spark_object_detector/yolov8_object_detector/scripts/: yolov8_ros2_yolov8n_pt.py
src/spark_app/spark_rtab_map/: CMakeLists.txt  package.xml
src/spark_app/spark_rtab_map/launch/: spark_rtabmap_rgbd.launch.py  spark_rtabmap_rgbd_sync.launch.py  start_rtabmap_rgbd.launch.py  start_rtabmap_rgbd_sync.launch.py  start_rtabmap_scan.launch.py
src/spark_app/spark_rtab_map/rviz/: spark_rtabmap.rviz
src/spark_app/spark_rtab_map/scripts/: save_map_action.sh  save_map_cmd.sh
src/spark_app/spark_slam/spark_cartographer/: CMakeLists.txt  package.xml
src/spark_app/spark_slam/spark_cartographer/launch/: cartographer.launch.py  start_build_map_cartographer.launch.py
src/spark_app/spark_slam/spark_cartographer/rviz/: spark_cartographer.rviz
src/spark_app/spark_slam/spark_slam_transfer/: CMakeLists.txt  package.xml
src/spark_app/spark_slam/spark_slam_transfer/launch/: start_build_map_cartographer.launch.py  start_build_map_gmapping.launch.py  start_build_map_slam_toolbox.launch.py
src/spark_app/spark_slam/spark_slam_transfer/scripts/: save_map_action.sh
src/spark_app/spark_torch/: package.xml  setup.cfg  setup.py
src/spark_app/spark_torch/spark_torch/: yolov5.py
src/spark_app/spark_voice/: package.xml  setup.cfg  setup.py
src/spark_app/spark_voice/launch/: baidu_nav.launch.py  turtle_nav.launch.py  voice_nav.launch.py  vosk_nav.launch.py
src/spark_app/spark_voice/spark_voice/: baidu_asr.py  ekho_tts.py  kdxf_asr.py  local_asr.py  voice_nav.py
src/spark_app/spark_voice/spark_voice/lib/: __init__.py  microphone.py
src/spark_app/spark_yolov8/: package.xml  setup.cfg  setup.py
src/spark_app/spark_yolov8/launch/: spark_yolo_object.launch.py  spark_yolo_pose.launch.py
src/spark_app/spark_yolov8/rviz/: spark_yolov8.rviz
src/spark_app/spark_yolov8/spark_yolov8/: camera_object.py  camera_pose.py
src/spark_app/voskros/launch/: spark_voskros.launch.py
src/spark_app/voskros/scripts/: vosk
src/spark_driver/arm/uArm/swiftpro/: CMakeLists.txt  package.xml
src/spark_driver/arm/uArm/swiftpro/launch/: pro_control_nomoveit.launch.py
src/spark_driver/arm/uArm/swiftpro/src/: swiftpro_moveit_node.cpp  swiftpro_read_node.cpp  swiftpro_rviz_node.cpp  swiftpro_write_node.cpp
src/spark_driver/base/spark_base/: CMakeLists.txt  package.xml
src/spark_driver/base/spark_base/include/spark_base/: kfilter.hpp  mylock.hpp  spark_base_constants.h  spark_base_driver.h  spark_base_interface.h  spark_base_serial.h
src/spark_driver/base/spark_base/launch/: spark_base.launch.py
src/spark_driver/base/spark_base/src/: spark_base_driver.cpp  spark_base_interface.cpp  spark_base_node.cpp  spark_base_serial.cpp
src/spark_driver/camera/camera_driver_transfer/launch/: d435.launch.py  start_camera.launch.py
src/spark_driver/lidar/lidar_driver_transfer/launch/: berxel.launch  d435.launch.py  (+1 more)
src/spark_driver/my_pkg/: CMakeLists.txt  package.xml
src/spark_driver/my_pkg/src/: my_node.cpp
src/spark_driver/test_pkg/: CMakeLists.txt  package.xml
(+12 files in other folders)
